public/assets/css/picoreflow.css
@font-face{
    font-family: "Digi";
    src: url('/picoreflow/assets/fonts/digital-7-webfont.eot');
    src: local("Digital 7"),
    url('/picoreflow/assets/fonts/digital-7-webfont.woff') format("woff"),
    url('/picoreflow/assets/fonts/digital-7-webfont.ttf') format("truetype");
}

@font-face{
    font-family: "Tables";
    src: url('/picoreflow/assets/fonts/tables.eot');
    src: local("Tables"),
    url('/picoreflow/assets/fonts/tables.woff') format("woff"),
    url('/picoreflow/assets/fonts/tables.ttf') format("truetype");
}

body {
    background: #b9b6af;
}

#status {
    margin-top: 15px;
    color: #d8d3c5;
    font-weight: normal;
    -webkit-border-radius: 7px;
    -moz-border-radius: 7px;
    border-radius: 7px;
    border: 1px solid #ddd;
    height: 80px;
    -moz-box-shadow: 0 0 1.1em 0 rgba(0,0,0,0.55);
    -webkit-box-shadow: 0 0 1.5em 0 rgba(0,0,0,0.55);
    box-shadow: 0 0 1.1em 0 rgba(0,0,0,0.55);
}

.display {
    display: inline-block;
    text-align: right;
    padding-right: 5px;
    font-size: 40px;
    font-weight: normal;
    height: 40px;
    line-height: 40px;
    vertical-align: middle;
    color: #d8d3c5;
    border-color: #000000;
}

.ds-panel {
    background: #3F3E3A url('/picoreflow/assets/images/panel_bg.png') repeat;
    -moz-box-shadow: inset 0 0 42px 0 #000;
    -webkit-box-shadow: inset 0 0 42px 0 #000;
    box-shadow: inset 0 0 42px 0 #000;
}

.ds-title-panel {
    -webkit-border-top-left-radius: 6px;
    -webkit-border-top-right-radius: 6px;
    -moz-border-radius-topleft: 6px;
    -moz-border-radius-topright: 6px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    background-image: -webkit-gradient(linear,left 0,left 100%,from(#f5f5f5),to(#e8e8e8));
    background-image: -webkit-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
    background-image: -moz-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
    background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5',endColorstr='#ffe8e8e8',GradientType=0);
    height: 18px;
}

.ds-title {
    display: inline-block;
    font-size: 10px;
    height: 18px;
    line-height: 18px;
    width: 100px;
    border-right: 1px solid #b9b6af;
    vertical-align: top;
    text-align: center;
    color: #8B8989;
    text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.75);
}

.ds-num {
    width: 100px;
    font-family: "Digi";
    border-right: 1px solid #b9b6af;
    white-space: nowrap;
    text-shadow: 0 0 25px rgba(0, 0, 0, 1);
}

.ds-input {
    color: #d8d3c5;
    font-family: "Digi";
    font-size: 24px;
    text-shadow: 0 0 12px rgba(0, 0, 0, 1);
    background: #3F3E3A url('/picoreflow/assets/images/panel_bg.png') repeat;
    -moz-box-shadow: inset 0 0 12px 0 #000;
    -webkit-box-shadow: inset 0 0 12px 0 #000;
    box-shadow: inset 0 0 12px 0 #000;
    text-align: right;
    padding: 0;
    padding-right: 7px;

}

.ds-unit {
    font-family: "Arial";
    font-size: 22px;
    vertical-align: top;
    line-height: 32px;
    margin-left: 4px;
}

.ds-led {
    font-family: "Tables";
    font-size: 38px;
    text-align: center;
    color: #1F1E1A;
    text-shadow: 0 0 5px #000, 0 0 5px #000;
    border-left: 1px solid #b9b6af;
    height: 40px;
    width: 42px;
    display: inline-block;
}

.bar {
    width:70%;
    //padding: 2px 2px 0px 2px;
    //display:block;
    display: inline-block;
    font-family:arial;
    font-size:12px;
    background-color:#ca3c38;
    color:#000;
    //position:absolute;
    //bottom:0;
    }

.ds-led-hazard-active {
    color: rgb(255, 204, 0);
    background: -moz-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%, rgba(241,218,54,0.26) 100%); /* FF3.6+ */
    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(242,195,67,1)), color-stop(100%,rgba(241,218,54,0.26))); /* Chrome,Safari4+ */
    background: -webkit-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* Opera 12+ */
    background: -ms-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* IE10+ */
    background: radial-gradient(ellipse at center, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* W3C */
}

.ds-led-door-open {
    color: rgb(214, 42, 0);
    background: -moz-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%, rgba(241,218,54,0.26) 100%); /* FF3.6+ */
    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(242,195,67,1)), color-stop(100%,rgba(241,218,54,0.26))); /* Chrome,Safari4+ */
    background: -webkit-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* Opera 12+ */
    background: -ms-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* IE10+ */
    background: radial-gradient(ellipse at center, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* W3C */
}
/* ... */

